# amt

./: CMakeLists.txt  LICENSE  README.md
samples/: rats.avi
source/: AbstractEventHandler.h  Area.cpp  Area.h  AreaGroup.cpp  AreaGroup.h  CameraFrameSource.cpp  CameraFrameSource.h  DiffAlgorithm.cpp  DiffAlgorithm.h  Engine.cpp  Engine.h  EventHandler.cpp  EventHandler.h  EventListener.cpp  EventListener.h  EventMonitor.cpp  EventMonitor.h  FileFrameSource.cpp  FileFrameSource.h  Frame.cpp  Frame.h  FrameListener.cpp  FrameListener.h  FrameMovementExtractor.cpp  FrameMovementExtractor.h  FrameSource.cpp  FrameSource.h  FrameStreamer.cpp  FrameStreamer.h  LockingTimer.cpp  LockingTimer.h  MainWindowWidget.cpp  MainWindowWidget.h  MovementDetector.cpp  MovementDetector.h  OpenCVFrameSource.cpp  OpenCVFrameSource.h  QtEventListener.cpp  QtEventListener.h  QtEventMonitor.cpp  (+6 more)
tests/: FrameDirReader.cpp  FrameDirReader.h  MockEventHandler.h  MockEventMonitor.h  MockFrameListener.h  MockFrameSource.h  MockTimer.h  Samples.cpp  Samples.h  TestArea.cpp  TestAreaGroup.cpp  TestCameraFrameSource.cpp  TestDiffAlgorithm.cpp  TestEngine.cpp  TestFileFrameSource.cpp  TestFrame.cpp  TestFrameDirReader.cpp  TestFrameMovementExtractor.cpp  TestFrameSource.cpp  TestFrameStreamer.cpp  TestMovementDetector.cpp  TestQtEvents.cpp  main.cpp
ui/: mainwindow.ui
